tests/m3/hopix/typechecker/bad/litpatterns.hopix
val x : int = 3 ? { 3 => 0 | (_ : int) => "yo" }